--- a/source/themes/hugo-bearblog/layouts/404.html
+++ b/source/themes/hugo-bearblog/layouts/404.html
@@ -1,6 +1,8 @@
 {{ define "title" }}404{{ end }}
 
 {{ define "main" }}
-<h1>404</h1>
-<h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
+<h1>You've reached the end of suffering..</h1>
+
+<img src="images/404.jpg" alt="ERROR 404">
+<br>
 {{ end }}
