--- a/source/themes/hugo-bearblog/layouts/404.html
+++ b/source/themes/hugo-bearblog/layouts/404.html
@@ -1,8 +1,9 @@
 {{ define "title" }}404{{ end }}
 
 {{ define "main" }}
-<h1>You've reached the end of suffering..</h1>
+<center><h1>You've reached the end of suffering..</h1></center>
 
 <img src="images/404.jpg" alt="ERROR 404">
 <br>
+<center><a href="index.html">Go Home!</a></center>
 {{ end }}
