--- a/source/themes/hugo-bearblog/layouts/404.html
+++ b/source/themes/hugo-bearblog/layouts/404.html
@@ -5,5 +5,5 @@
 <img src="images/404.jpg" alt="ERROR 404">
 <br>
 <br>
-<center><a href="index.html">Go Home!</a></center>
+<center><a href="{{ "/" | relURL }}">Go Home!</a></center>
 {{ end }}
