temp fix for 404 image

--- a/source/themes/hugo-bearblog/layouts/404.html
+++ b/source/themes/hugo-bearblog/layouts/404.html
@@ -2,7 +2,7 @@
 
 {{ define "main" }}
 <center><h1>You've reached the end of suffering..</h1></center>
-<img src="images/404.jpg" alt="ERROR 404"> 
+<img src="https://ahtrahddis.github.io/images/404.jpg" alt="ERROR 404"> 
 <br>
 <br>
 <center><a href="{{ "/" | relURL }}">Go Home!</a></center>
