added custom CSS for youtube videos

--- a/source/themes/hugo-bearblog/layouts/404.html
+++ b/source/themes/hugo-bearblog/layouts/404.html
@@ -5,7 +5,9 @@
 <br>
 <center><h2><font color="black"><tt>(Error) The page you requested was sucked into the void (404)</tt></font></h2></center>
 <br>
-<center><iframe width="640" height="360" src="https://www.youtube.com/embed/fx2Z5ZD_Rbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<div class="video-container">
+  <iframe src="https://www.youtube.com/embed/fx2Z5ZD_Rbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 <br>
 <br>
 <center><a href="{{ "/" | relURL }}">Go Home!</a></center>
