--- a/source/themes/hugo-bearblog/layouts/partials/style.html
+++ b/source/themes/hugo-bearblog/layouts/partials/style.html
@@ -1,6 +1,9 @@
 <style>
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+
   body {
-    font-family: Verdana, sans-serif;
+    font-family: IBM Plex Mono, monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
