--- a/source/themes/hugo-bearblog/layouts/partials/style.html
+++ b/source/themes/hugo-bearblog/layouts/partials/style.html
@@ -1,6 +1,6 @@
 <style>
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
   body {
     font-family: IBM Plex Mono, monospace;
