--- a/source/themes/hugo-bearblog/layouts/partials/style.html
+++ b/source/themes/hugo-bearblog/layouts/partials/style.html
@@ -1,9 +1,10 @@
 <style>
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+
 
   body {
-    font-family: IBM Plex Mono, monospace;
+    font-family: 'Cutive Mono', monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -31,8 +32,8 @@
   }
 
   .title {
-  	font-family: Verdana, sans-serif;
-  	font-size: 18px;
+    font-family: Verdana, sans-serif;
+    font-size: 18px;
     text-decoration: none;
     border: 0;
   }
