--- a/source/themes/hugo-bearblog/layouts/partials/style.html
+++ b/source/themes/hugo-bearblog/layouts/partials/style.html
@@ -1,10 +1,10 @@
 <style>
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
   body {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Lexend Deca', sans-serif;
     margin: auto;
     padding: 20px;
     max-width: 720px;
@@ -25,15 +25,18 @@
   strong,
   b {
     color: #222;
+    font-family: 'Roboto Condensed', sans-serif;
   }
+
 
   a {
     color: #3273dc;
   }
 
   .title {
-    font-family: Verdana, sans-serif;
-    font-size: 18px;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #222;
+    font-size: 20px;
     text-decoration: none;
     border: 0;
   }
