--- a/source/themes/hugo-bearblog/layouts/404.html
+++ b/source/themes/hugo-bearblog/layouts/404.html
@@ -3,7 +3,7 @@
 
 {{ define "main" }}
 <br>
-<center><h2><font color="black"><tt>(Error) The page you requested was sucked into the void (404)</tt></font></h2></center>
+<center><font color="black"><tt>(Error) The page you requested was sucked into the void (404)</tt></font></center>
 <br>
 <div class="video-container">
   <iframe src="https://www.youtube.com/embed/fx2Z5ZD_Rbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
