--- a/source/themes/hugo-bearblog/layouts/partials/style.html
+++ b/source/themes/hugo-bearblog/layouts/partials/style.html
@@ -5,14 +5,16 @@
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf'); 
+  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf');
+  font-display: swap; 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
   font-style: bold;
   font-weight: 700;
-  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
+  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf');
+  font-display: swap; 
 }
 
 @font-face {
@@ -20,6 +22,7 @@
   font-style: bold;
   font-weight: 800;
   src: local('Montserrat Extra Bold'), url('/fonts/Montserrat-ExtraBold.otf'); 
+  font-display: swap;
 }
 
   body {
